--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
   </header>
   <section id="inicio" class="hero">
     <div class="container hero-wrap">
-      <h1>Operações com balões estratosféricos na Amazônia</h1>
+      <h1>Operações com balões Estratosféricos na Amazônia</h1>
       <p>Projeto estratégico que integra infraestrutura, pesquisa científica e formação de equipes, conectando o Brasil a campanhas internacionais.</p>
       <div class="hero-actions">
         <a class="btn btn-primary" href="#sobre">Conheça o Projeto</a>
@@ -235,3 +235,4 @@
   </script>
 </body>
 </html>
+
