Fix HTML structure and content updates

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   <section id="inicio" class="hero">
     <div class="container hero-wrap">
       <h1>Operações com balões Estratosféricos na Amazônia</h1>
-      <p>Projeto estratégico que integra infraestrutura, pesquisa científica e formação de equipes, conectando o Brasil a campanhas internacionais.</p>
+      <p> TESTESProjeto estratégico que integra infraestrutura, pesquisa científica e formação de equipes, conectando o Brasil a campanhas internacionais.</p>
       <div class="hero-actions">
         <a class="btn btn-primary" href="#sobre">Conheça o Projeto</a>
         <a class="btn btn-outline" href="#participar">Participe</a>
@@ -235,4 +235,5 @@
   </script>
 </body>
 </html>
+
 
