--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     .container{max-width:var(--container);margin:0 auto;padding:0 20px}
     .btn{display:inline-flex;align-items:center;gap:.5rem;padding:.8rem 1.1rem;border-radius:12px;font-weight:600;border:1px solid transparent}
     .btn-primary{background:var(--verde);color:#fff}
-    .btn-outline{border-color:#fff;color:#fff}
+    .btn-outline{border-color:var(--azul);color:var(--azul);background:#fff}
     .btn-link{color:var(--azul)}
     header{position:sticky;top:0;z-index:50;background:rgba(255,255,255,.92);backdrop-filter:saturate(1.2) blur(6px);border-bottom:1px solid var(--borda)}
     .nav{display:flex;justify-content:space-between;align-items:center;height:64px}
@@ -26,12 +26,12 @@
     .logo{width:36px;height:36px;background:var(--azul);color:#fff;border-radius:10px;display:grid;place-items:center;font-weight:800}
     .menu{display:none;gap:1.2rem}
     @media(min-width:860px){.menu{display:flex}}
-    .hero{position:relative;isolation:isolate}
-    .hero::before{content:"";position:absolute;inset:0;z-index:-2;background:url('https://via.placeholder.com/1600x900') center/cover no-repeat}
-    .hero::after{content:"";position:absolute;inset:0;z-index:-1;background:linear-gradient(180deg,rgba(0,0,0,.60),rgba(255,255,255,1) 100%)}
-    .hero-wrap{padding:88px 0 96px;color:#fff}
+    .hero{position:relative;background:var(--bg-muted)}
+    .hero-wrap{padding:88px 0 96px;color:var(--texto)}
     .hero h1{font-size:clamp(28px,4vw,48px);line-height:1.15;margin:0 0 10px}
-    .hero p{max-width:720px;margin:10px 0 0;color:#eef2ff}
+    .hero p{max-width:720px;margin:10px 0 0;color:#475569}
+    .hero-media{border-radius:var(--radius);overflow:hidden;box-shadow:var(--shadow);margin-bottom:32px;border:1px solid var(--borda);background:#000}
+    .hero-media img{width:100%;height:auto;display:block}
     .hero-actions{display:flex;gap:.75rem;flex-wrap:wrap;margin-top:22px}
     section{padding:64px 0}
     .section-title{font-size:clamp(22px,3vw,36px);margin:0 0 8px}
@@ -85,6 +85,9 @@
   </header>
   <section id="inicio" class="hero">
     <div class="container hero-wrap">
+      <div class="hero-media">
+        <img src="assets/inicio.jpg" alt="Balão estratosférico sendo preparado para lançamento noturno" />
+      </div>
       <h1>Operações com balões Estratosféricos na Amazônia</h1>
       <p>Projeto estratégico que integra infraestrutura, pesquisa científica e formação de equipes, conectando o Brasil a campanhas internacionais.</p>
       <div class="hero-actions">
